Changelog
=========

1.3.0 - unreleased
------------------

* Plone 3 support is back. No change for Plone 4
  [glenfant]

* Fix #85 - Add a new event break collage view [yboussard]

* Image and File layouts work with blob objects.
  [thomasdesvenain]

* Fixed many internationalizations.
  [thomasdesvenain]

* Updated french translations.
  [thomasdesvenain]

* Synched ``i18n/collage-xx.po`` files.
  [thomasdesvenain]

* Number of columns per batch is configurable via @@collage-controlpanel.
  Added support for 4- and 5-column layout (CSS and templates).
  [khink]

1.3.0-b4 (2010-04-06)
---------------------

* Fixed issue where layout viewlets would not be shown on Plone 4 due
  to an incorrect type assertion.

* The content type icon for Aliased content now appears with a border
  instead of the "alias" label.

* Fixed UI styling on Plone 4.

* Compatibility fix for Chameleon.

1.3.0-b3 (2010-02-04)
---------------------

* Plone 4 compatibility.
  [malthe]

* New icons.
  [malthe]

1.3.0-b2 (2010-01-17)
---------------------

* Added topic view which inherits the view setting from the topic
  content object (using a mapping to collage view names).
  [malthe]

* Added topic views for tabular and summary displays.
  [malthe]

* Fixed issue where you could not choose the standard layout if a
  missing layout was already selected (this might occur if an add-on
  product had been removed).
  [malthe]

* Synched ``i18n/collage-xx.po`` files (10 messages added, 5 removed)
  [glenfant]

* Added a GS upgrade step to 1.3.0
  [glenfant]

1.3.0-b1 (2010-01-09)
---------------------

* Adjusted the row renderer's use of template arguments for compatibility
  with Zope 2.12.
  [davisagli]

* Aliases are now inserted using an ajax-driven reference browser
  (custom implementation) which operates similarly to the standard
  Plone reference browser widget.
  [malthe]

* Fail gracefully (and informatively) when a layout cannot render.
  [malthe]
