@@ -10,6 +10,8 @@
   </object>
   <object name="collage_properties" meta_type="Plone Property Sheet">
     <property name="title">Options for Collage</property>
+    <property name="ref_browser_empty" type="boolean">False</property>
+    <property name="ref_browser_types" type="boolean">False</property>
     <property name="use_whitelist" type="boolean">False</property>
     <property name="types_whitelist" type="lines">
       <element value="Document"/>
@@ -30,5 +32,6 @@
       <element value="News Item"/>
       <element value="Topic"/>
     </property>
+    <property name="batch_size" type="int">3</property>
   </object>
 </object>
